kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapp
spec:
  backend:
    serviceName: testapp
    servicePort: 80
